Fix a variety of bugs and continue to merge in card validation, fixes to tests